Remove some use of deprecated APIs
AbstractUIPlugin.getWorkbench()
new Character(char)
new Long(long)
FontMetrics.getAverageCharWidth()
StyleText.getOffsetAtLocation(Point)

The last two are replaced with APIs that are only available starting
with Eclipse 4.8 (Photon).

[Fixed] Remove some use of deprecated APIs

Change-Id: Ib3ce51ebcc88bce8ef86c9b9479cb12734724fd2
Signed-off-by: Patrick Tasse <patrick.tasse@gmail.com>
Reviewed-on: https://git.eclipse.org/r/c/tracecompass/org.eclipse.tracecompass/+/166765
Tested-by: Trace Compass Bot <tracecompass-bot@eclipse.org>
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
Reviewed-by: Matthew Khouzam <matthew.khouzam@ericsson.com>